packages/win32/src/user32.g.h

MYLIB_EXPORT Win32Result EndDialog_Wrapper(HWND hDlg, long long nResult);
MYLIB_EXPORT Win32Result EndMenu_Wrapper();
MYLIB_EXPORT Win32Result EnumClipboardFormats_Wrapper(unsigned long format);
MYLIB_EXPORT Win32Result EnumDesktopWindows_Wrapper(HDESK hDesktop, WNDENUMPROC lpfn, LPARAM lParam);
MYLIB_EXPORT Win32Result EnumWindows_Wrapper(WNDENUMPROC lpEnumFunc, LPARAM lParam);
MYLIB_EXPORT Win32Result FindWindowW_Wrapper(PCWSTR lpClassName, PCWSTR lpWindowName);
MYLIB_EXPORT Win32Result FindWindowExW_Wrapper(HWND hWndParent, HWND hWndChildAfter, PCWSTR lpszClass, PCWSTR lpszWindow);
MYLIB_EXPORT Win32Result GetAltTabInfoW_Wrapper(HWND hwnd, int iItem, ALTTABINFO* pati, PWSTR pszItemText, unsigned long cchItemText);
MYLIB_EXPORT Win32Result GetCaretBlinkTime_Wrapper();
MYLIB_EXPORT Win32Result GetCaretPos_Wrapper(POINT* lpPoint);
MYLIB_EXPORT Win32Result GetClassInfoW_Wrapper(HINSTANCE hInstance, PCWSTR lpClassName, WNDCLASSW* lpWndClass);
MYLIB_EXPORT Win32Result GetClassInfoExW_Wrapper(HINSTANCE hInstance, PCWSTR lpszClass, WNDCLASSEXW* lpwcx);
MYLIB_EXPORT Win32Result GetClassLongPtrW_Wrapper(HWND hWnd, LONG nIndex);
MYLIB_EXPORT Win32Result GetClassNameW_Wrapper(HWND hWnd, PWSTR lpClassName, int nMaxCount);
MYLIB_EXPORT Win32Result GetClientRect_Wrapper(HWND hWnd, RECT* lpRect);
MYLIB_EXPORT Win32Result GetClipboardData_Wrapper(unsigned long uFormat);
MYLIB_EXPORT Win32Result GetClipboardFormatNameW_Wrapper(unsigned long format, PWSTR lpszFormatName, int cchMaxCount);
MYLIB_EXPORT Win32Result GetClipboardOwner_Wrapper();
MYLIB_EXPORT Win32Result GetClipboardViewer_Wrapper();
MYLIB_EXPORT Win32Result GetClipCursor_Wrapper(RECT* lpRect);
MYLIB_EXPORT Win32Result GetCursorInfo_Wrapper(CURSORINFO* pci);
MYLIB_EXPORT Win32Result GetCursorPos_Wrapper(POINT* lpPoint);
MYLIB_EXPORT Win32Result GetDialogControlDpiChangeBehavior_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result GetDialogDpiChangeBehavior_Wrapper(HWND hDlg);
MYLIB_EXPORT Win32Result GetDlgItem_Wrapper(HWND hDlg, int nIDDlgItem);
MYLIB_EXPORT Win32Result GetDlgItemInt_Wrapper(HWND hDlg, int nIDDlgItem, BOOL* lpTranslated, BOOL bSigned);
MYLIB_EXPORT Win32Result GetDlgItemTextW_Wrapper(HWND hDlg, int nIDDlgItem, PWSTR lpString, int cchMax);
MYLIB_EXPORT Win32Result GetGestureConfig_Wrapper(HWND hwnd, unsigned long dwReserved, unsigned long dwFlags, unsigned long* pcIDs, GESTURECONFIG* pGestureConfig, unsigned long cbSize);
MYLIB_EXPORT Win32Result GetGestureExtraArgs_Wrapper(HGESTUREINFO hGestureInfo, unsigned long cbExtraArgs, unsigned char* pExtraArgs);
MYLIB_EXPORT Win32Result GetGestureInfo_Wrapper(HGESTUREINFO hGestureInfo, GESTUREINFO* pGestureInfo);
MYLIB_EXPORT Win32Result GetGUIThreadInfo_Wrapper(unsigned long idThread, GUITHREADINFO* pgui);
MYLIB_EXPORT Win32Result GetIconInfo_Wrapper(HICON hIcon, ICONINFO* piconinfo);
MYLIB_EXPORT Win32Result GetKeyboardLayoutList_Wrapper(int nBuff, HKL* lpList);
MYLIB_EXPORT Win32Result GetKeyboardLayoutNameW_Wrapper(PWSTR pwszKLID);
MYLIB_EXPORT Win32Result GetKeyboardState_Wrapper(unsigned char* lpKeyState);
MYLIB_EXPORT Win32Result GetKeyboardType_Wrapper(int nTypeFlag);
MYLIB_EXPORT Win32Result GetKeyNameTextW_Wrapper(int lParam, PWSTR lpString, int cchSize);
MYLIB_EXPORT Win32Result GetLayeredWindowAttributes_Wrapper(HWND hwnd, COLORREF* pcrKey, unsigned char* pbAlpha, DWORD* pdwFlags);
MYLIB_EXPORT Win32Result GetMenuBarInfo_Wrapper(HWND hwnd, LONG idObject, int idItem, MENUBARINFO* pmbi);
MYLIB_EXPORT Win32Result GetMenuDefaultItem_Wrapper(HMENU hMenu, unsigned long fByPos, DWORD gmdiFlags);
MYLIB_EXPORT Win32Result GetMenuInfo_Wrapper(HMENU param0, MENUINFO* param1);
MYLIB_EXPORT Win32Result GetMenuItemCount_Wrapper(HMENU hMenu);
MYLIB_EXPORT Win32Result GetMenuItemInfoW_Wrapper(HMENU hmenu, unsigned long item, BOOL fByPosition, MENUITEMINFOW* lpmii);
MYLIB_EXPORT Win32Result GetMenuItemRect_Wrapper(HWND hWnd, HMENU hMenu, unsigned long uItem, RECT* lprcItem);
MYLIB_EXPORT Win32Result GetMessageW_Wrapper(MSG* lpMsg, HWND hWnd, unsigned long wMsgFilterMin, unsigned long wMsgFilterMax);
MYLIB_EXPORT Win32Result GetMouseMovePointsEx_Wrapper(unsigned long cbSize, MOUSEMOVEPOINT* lppt, MOUSEMOVEPOINT* lpptBuf, int nBufPoints, DWORD resolution);
MYLIB_EXPORT Win32Result GetNextDlgGroupItem_Wrapper(HWND hDlg, HWND hCtl, BOOL bPrevious);
MYLIB_EXPORT Win32Result GetNextDlgTabItem_Wrapper(HWND hDlg, HWND hCtl, BOOL bPrevious);
MYLIB_EXPORT Win32Result GetOpenClipboardWindow_Wrapper();
MYLIB_EXPORT Win32Result GetParent_Wrapper(HWND hWnd);
MYLIB_EXPORT Win32Result GetPhysicalCursorPos_Wrapper(POINT* lpPoint);
MYLIB_EXPORT Win32Result GetPointerCursorId_Wrapper(unsigned long pointerId, unsigned long* cursorId);
MYLIB_EXPORT Win32Result GetPointerFrameInfo_Wrapper(unsigned long pointerId, unsigned long* pointerCount, POINTER_INFO* pointerInfo);
MYLIB_EXPORT Win32Result GetPointerFrameInfoHistory_Wrapper(unsigned long pointerId, unsigned long* entriesCount, unsigned long* pointerCount, POINTER_INFO* pointerInfo);
MYLIB_EXPORT Win32Result GetPointerFramePenInfo_Wrapper(unsigned long pointerId, unsigned long* pointerCount, POINTER_PEN_INFO* penInfo);
MYLIB_EXPORT Win32Result GetPointerFramePenInfoHistory_Wrapper(unsigned long pointerId, unsigned long* entriesCount, unsigned long* pointerCount, POINTER_PEN_INFO* penInfo);
MYLIB_EXPORT Win32Result GetPointerFrameTouchInfo_Wrapper(unsigned long pointerId, unsigned long* pointerCount, POINTER_TOUCH_INFO* touchInfo);
MYLIB_EXPORT Win32Result GetPointerFrameTouchInfoHistory_Wrapper(unsigned long pointerId, unsigned long* entriesCount, unsigned long* pointerCount, POINTER_TOUCH_INFO* touchInfo);
MYLIB_EXPORT Win32Result GetPointerInfo_Wrapper(unsigned long pointerId, POINTER_INFO* pointerInfo);
MYLIB_EXPORT Win32Result GetPointerInfoHistory_Wrapper(unsigned long pointerId, unsigned long* entriesCount, POINTER_INFO* pointerInfo);
MYLIB_EXPORT Win32Result GetPointerInputTransform_Wrapper(unsigned long pointerId, unsigned long historyCount, INPUT_TRANSFORM* inputTransform);
MYLIB_EXPORT Win32Result GetPointerPenInfo_Wrapper(unsigned long pointerId, POINTER_PEN_INFO* penInfo);
MYLIB_EXPORT Win32Result GetPointerPenInfoHistory_Wrapper(unsigned long pointerId, unsigned long* entriesCount, POINTER_PEN_INFO* penInfo);