packages/win32/lib/src/_internal/user32.g.dart


@internal
@Native<NativeWin32Result Function(HWND, IntPtr)>()
external NativeWin32Result EndDialog_Wrapper(int hDlg, int nResult);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result EndMenu_Wrapper();

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result EnumClipboardFormats_Wrapper(int format);

@internal
@Native<
  NativeWin32Result Function(
    HDESK,
    Pointer<NativeFunction<WNDENUMPROC>>,
    LPARAM,
  )
>()
external NativeWin32Result EnumDesktopWindows_Wrapper(
  int hDesktop,
  Pointer<NativeFunction<WNDENUMPROC>> lpfn,
  int lParam,
);

@internal
@Native<
  NativeWin32Result Function(Pointer<NativeFunction<WNDENUMPROC>>, LPARAM)
>()
external NativeWin32Result EnumWindows_Wrapper(
  Pointer<NativeFunction<WNDENUMPROC>> lpEnumFunc,
  int lParam,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR)>()
external NativeWin32Result FindWindowW_Wrapper(
  PCWSTR lpClassName,
  PCWSTR lpWindowName,
);

@internal
@Native<NativeWin32Result Function(HWND, HWND, PCWSTR, PCWSTR)>()
external NativeWin32Result FindWindowExW_Wrapper(
  int hWndParent,
  int hWndChildAfter,
  PCWSTR lpszClass,
  PCWSTR lpszWindow,
);

@internal
@Native<
  NativeWin32Result Function(HWND, Int32, Pointer<ALTTABINFO>, PWSTR, Uint32)
>()
external NativeWin32Result GetAltTabInfoW_Wrapper(
  int hwnd,
  int iItem,
  Pointer<ALTTABINFO> pati,
  PWSTR pszItemText,
  int cchItemText,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetCaretBlinkTime_Wrapper();

@internal
@Native<NativeWin32Result Function(Pointer<POINT>)>()
external NativeWin32Result GetCaretPos_Wrapper(Pointer<POINT> lpPoint);

@internal
@Native<NativeWin32Result Function(HINSTANCE, PCWSTR, Pointer<WNDCLASS>)>()
external NativeWin32Result GetClassInfoW_Wrapper(
  int hInstance,
  PCWSTR lpClassName,
  Pointer<WNDCLASS> lpWndClass,
);

@internal
@Native<NativeWin32Result Function(HINSTANCE, PCWSTR, Pointer<WNDCLASSEX>)>()
external NativeWin32Result GetClassInfoExW_Wrapper(
  int hInstance,
  PCWSTR lpszClass,
  Pointer<WNDCLASSEX> lpwcx,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32)>()
external NativeWin32Result GetClassLongPtrW_Wrapper(int hWnd, int nIndex);

@internal
@Native<NativeWin32Result Function(HWND, PWSTR, Int32)>()
external NativeWin32Result GetClassNameW_Wrapper(
  int hWnd,
  PWSTR lpClassName,
  int nMaxCount,
);

@internal
@Native<NativeWin32Result Function(HWND, Pointer<RECT>)>()
external NativeWin32Result GetClientRect_Wrapper(
  int hWnd,
  Pointer<RECT> lpRect,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result GetClipboardData_Wrapper(int uFormat);

@internal
@Native<NativeWin32Result Function(Uint32, PWSTR, Int32)>()
external NativeWin32Result GetClipboardFormatNameW_Wrapper(
  int format,
  PWSTR lpszFormatName,
  int cchMaxCount,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetClipboardOwner_Wrapper();

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetClipboardViewer_Wrapper();

@internal
@Native<NativeWin32Result Function(Pointer<RECT>)>()
external NativeWin32Result GetClipCursor_Wrapper(Pointer<RECT> lpRect);

@internal
@Native<NativeWin32Result Function(Pointer<CURSORINFO>)>()
external NativeWin32Result GetCursorInfo_Wrapper(Pointer<CURSORINFO> pci);

@internal
@Native<NativeWin32Result Function(Pointer<POINT>)>()
external NativeWin32Result GetCursorPos_Wrapper(Pointer<POINT> lpPoint);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result GetDialogControlDpiChangeBehavior_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result GetDialogDpiChangeBehavior_Wrapper(int hDlg);

@internal
@Native<NativeWin32Result Function(HWND, Int32)>()
external NativeWin32Result GetDlgItem_Wrapper(int hDlg, int nIDDlgItem);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Pointer<BOOL>, BOOL)>()
external NativeWin32Result GetDlgItemInt_Wrapper(
  int hDlg,
  int nIDDlgItem,
  Pointer<BOOL> lpTranslated,
  int bSigned,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, PWSTR, Int32)>()
external NativeWin32Result GetDlgItemTextW_Wrapper(
  int hDlg,
  int nIDDlgItem,
  PWSTR lpString,
  int cchMax,
);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    Uint32,
    Uint32,
    Pointer<Uint32>,
    Pointer<GESTURECONFIG>,
    Uint32,
  )
>()
external NativeWin32Result GetGestureConfig_Wrapper(
  int hwnd,
  int dwReserved,
  int dwFlags,
  Pointer<Uint32> pcIDs,
  Pointer<GESTURECONFIG> pGestureConfig,
  int cbSize,
);

@internal
@Native<NativeWin32Result Function(HGESTUREINFO, Uint32, Pointer<Uint8>)>()
external NativeWin32Result GetGestureExtraArgs_Wrapper(
  int hGestureInfo,
  int cbExtraArgs,
  Pointer<Uint8> pExtraArgs,
);

@internal
@Native<NativeWin32Result Function(HGESTUREINFO, Pointer<GESTUREINFO>)>()
external NativeWin32Result GetGestureInfo_Wrapper(
  int hGestureInfo,
  Pointer<GESTUREINFO> pGestureInfo,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<GUITHREADINFO>)>()
external NativeWin32Result GetGUIThreadInfo_Wrapper(
  int idThread,
  Pointer<GUITHREADINFO> pgui,
);

@internal
@Native<NativeWin32Result Function(HICON, Pointer<ICONINFO>)>()
external NativeWin32Result GetIconInfo_Wrapper(
  int hIcon,
  Pointer<ICONINFO> piconinfo,
);

@internal
@Native<NativeWin32Result Function(Int32, Pointer<HKL>)>()
external NativeWin32Result GetKeyboardLayoutList_Wrapper(
  int nBuff,
  Pointer<HKL> lpList,
);

@internal
@Native<NativeWin32Result Function(PWSTR)>()
external NativeWin32Result GetKeyboardLayoutNameW_Wrapper(PWSTR pwszKLID);

@internal
@Native<NativeWin32Result Function(Pointer<Uint8>)>()
external NativeWin32Result GetKeyboardState_Wrapper(Pointer<Uint8> lpKeyState);

@internal
@Native<NativeWin32Result Function(Int32)>()
external NativeWin32Result GetKeyboardType_Wrapper(int nTypeFlag);

@internal
@Native<NativeWin32Result Function(Int32, PWSTR, Int32)>()
external NativeWin32Result GetKeyNameTextW_Wrapper(
  int lParam,
  PWSTR lpString,
  int cchSize,
);

@internal
@Native<
  NativeWin32Result Function(
    HWND,
    Pointer<COLORREF>,
    Pointer<Uint8>,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result GetLayeredWindowAttributes_Wrapper(
  int hwnd,
  Pointer<COLORREF> pcrKey,
  Pointer<Uint8> pbAlpha,
  Pointer<Uint32> pdwFlags,
);

@internal
@Native<NativeWin32Result Function(HWND, Int32, Int32, Pointer<MENUBARINFO>)>()
external NativeWin32Result GetMenuBarInfo_Wrapper(
  int hwnd,
  int idObject,
  int idItem,
  Pointer<MENUBARINFO> pmbi,
);

@internal
@Native<NativeWin32Result Function(HMENU, Uint32, Uint32)>()
external NativeWin32Result GetMenuDefaultItem_Wrapper(
  int hMenu,
  int fByPos,
  int gmdiFlags,
);

@internal
@Native<NativeWin32Result Function(HMENU, Pointer<MENUINFO>)>()
external NativeWin32Result GetMenuInfo_Wrapper(
  int param0,
  Pointer<MENUINFO> param1,
);

@internal
@Native<NativeWin32Result Function(HMENU)>()
external NativeWin32Result GetMenuItemCount_Wrapper(int hMenu);

@internal
@Native<
  NativeWin32Result Function(HMENU, Uint32, BOOL, Pointer<MENUITEMINFO>)
>()
external NativeWin32Result GetMenuItemInfoW_Wrapper(
  int hmenu,
  int item,
  int fByPosition,
  Pointer<MENUITEMINFO> lpmii,
);

@internal
@Native<NativeWin32Result Function(HWND, HMENU, Uint32, Pointer<RECT>)>()
external NativeWin32Result GetMenuItemRect_Wrapper(
  int hWnd,
  int hMenu,
  int uItem,
  Pointer<RECT> lprcItem,
);

@internal
@Native<NativeWin32Result Function(Pointer<MSG>, HWND, Uint32, Uint32)>()
external NativeWin32Result GetMessageW_Wrapper(
  Pointer<MSG> lpMsg,
  int hWnd,
  int wMsgFilterMin,
  int wMsgFilterMax,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer<MOUSEMOVEPOINT>,
    Pointer<MOUSEMOVEPOINT>,
    Int32,
    Uint32,
  )
>()
external NativeWin32Result GetMouseMovePointsEx_Wrapper(
  int cbSize,
  Pointer<MOUSEMOVEPOINT> lppt,
  Pointer<MOUSEMOVEPOINT> lpptBuf,
  int nBufPoints,
  int resolution,
);

@internal
@Native<NativeWin32Result Function(HWND, HWND, BOOL)>()
external NativeWin32Result GetNextDlgGroupItem_Wrapper(
  int hDlg,
  int hCtl,
  int bPrevious,
);

@internal
@Native<NativeWin32Result Function(HWND, HWND, BOOL)>()
external NativeWin32Result GetNextDlgTabItem_Wrapper(
  int hDlg,
  int hCtl,
  int bPrevious,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetOpenClipboardWindow_Wrapper();

@internal
@Native<NativeWin32Result Function(HWND)>()
external NativeWin32Result GetParent_Wrapper(int hWnd);

@internal
@Native<NativeWin32Result Function(Pointer<POINT>)>()
external NativeWin32Result GetPhysicalCursorPos_Wrapper(Pointer<POINT> lpPoint);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<Uint32>)>()
external NativeWin32Result GetPointerCursorId_Wrapper(
  int pointerId,
  Pointer<Uint32> cursorId,
);

@internal
@Native<
  NativeWin32Result Function(Uint32, Pointer<Uint32>, Pointer<POINTER_INFO>)
>()
external NativeWin32Result GetPointerFrameInfo_Wrapper(
  int pointerId,
  Pointer<Uint32> pointerCount,
  Pointer<POINTER_INFO> pointerInfo,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<POINTER_INFO>,
  )
>()
external NativeWin32Result GetPointerFrameInfoHistory_Wrapper(
  int pointerId,
  Pointer<Uint32> entriesCount,
  Pointer<Uint32> pointerCount,
  Pointer<POINTER_INFO> pointerInfo,
);

@internal
@Native<
  NativeWin32Result Function(Uint32, Pointer<Uint32>, Pointer<POINTER_PEN_INFO>)
>()
external NativeWin32Result GetPointerFramePenInfo_Wrapper(
  int pointerId,
  Pointer<Uint32> pointerCount,
  Pointer<POINTER_PEN_INFO> penInfo,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<POINTER_PEN_INFO>,
  )
>()
external NativeWin32Result GetPointerFramePenInfoHistory_Wrapper(
  int pointerId,
  Pointer<Uint32> entriesCount,
  Pointer<Uint32> pointerCount,
  Pointer<POINTER_PEN_INFO> penInfo,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer<Uint32>,
    Pointer<POINTER_TOUCH_INFO>,
  )
>()
external NativeWin32Result GetPointerFrameTouchInfo_Wrapper(
  int pointerId,
  Pointer<Uint32> pointerCount,
  Pointer<POINTER_TOUCH_INFO> touchInfo,
);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<POINTER_TOUCH_INFO>,
  )
>()
external NativeWin32Result GetPointerFrameTouchInfoHistory_Wrapper(
  int pointerId,
  Pointer<Uint32> entriesCount,
  Pointer<Uint32> pointerCount,
  Pointer<POINTER_TOUCH_INFO> touchInfo,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<POINTER_INFO>)>()
external NativeWin32Result GetPointerInfo_Wrapper(
  int pointerId,
  Pointer<POINTER_INFO> pointerInfo,
);

@internal
@Native<
  NativeWin32Result Function(Uint32, Pointer<Uint32>, Pointer<POINTER_INFO>)
>()
external NativeWin32Result GetPointerInfoHistory_Wrapper(
  int pointerId,
  Pointer<Uint32> entriesCount,
  Pointer<POINTER_INFO> pointerInfo,
);

@internal
@Native<NativeWin32Result Function(Uint32, Uint32, Pointer<INPUT_TRANSFORM>)>()
external NativeWin32Result GetPointerInputTransform_Wrapper(
  int pointerId,
  int historyCount,
  Pointer<INPUT_TRANSFORM> inputTransform,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<POINTER_PEN_INFO>)>()
external NativeWin32Result GetPointerPenInfo_Wrapper(
  int pointerId,
  Pointer<POINTER_PEN_INFO> penInfo,
);

@internal
@Native<
  NativeWin32Result Function(Uint32, Pointer<Uint32>, Pointer<POINTER_PEN_INFO>)
>()
external NativeWin32Result GetPointerPenInfoHistory_Wrapper(
  int pointerId,
  Pointer<Uint32> entriesCount,
  Pointer<POINTER_PEN_INFO> penInfo,
);
